--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ license = "MIT"
 
 [dependencies]
 linkme = "0.3"
-hashbrown = "0.11"
 lazy_static = "1.5.0"
 log = "0.4"
 spin = "0.9"
+libc = "0.2"
+twox-hash = "2.1"
